# AlohaX

./: README.md
docs/: AlohaX_Assembly_Guide.md  AlohaX_BOM.md  AlohaX_Robot_Introduction.md  Serial_Port_Fix_Method.md
examples/debug/: README_debug.md  axis.py  motors.py  wheels.py
examples/tele/: AlohaX_Joycon_Software_Design.md  alohax_joycon.py  alohax_keyboard.py  alohax_xbox.py  wheels_joycon.py
install/: local_setup.sh  setup.sh
log/: latest_build
src/alohax_bringup/: CMakeLists.txt
src/alohax_bringup/launch/: alohax.launch.py
src/alohax_bringup/rviz/: xlerobot_moveit.rviz
src/alohax_hw_bridge/: package.xml  setup.cfg  setup.py
src/alohax_hw_bridge/alohax_hw_bridge/: alohax_bridge.py  motors_bus.py
src/alohax_hw_bridge/alohax_hw_bridge/motors/: __init__.py
src/alohax_hw_bridge/alohax_hw_bridge/motors/feetech/: __init__.py  feetech.py
src/alohax_hw_bridge/alohax_hw_bridge/utils/: encoding_utils.py
src/alohax_hw_bridge/config/: alohax_calibration.yaml  alohax_controllers.yaml
src/alohax_hw_bridge/launch/: hw_bridge.launch.py
src/alohax_moveit_config/: CMakeLists.txt
src/alohax_moveit_config/config/: alohax.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/alohax_moveit_config/launch/: move_group.launch.py
src/alohax_urdf/: CMakeLists.txt
src/alohax_urdf/config/: joint_names_Aloha.yaml
src/alohax_urdf/launch/: display.launch  display.launch.py  gazebo.launch
src/alohax_urdf/meshes/: base_body.dae  base_body.stl  raskog_basket.dae  raskog_basket.stl  raskogwheel1.dae  raskogwheel1.stl  raskogwheel2.dae  (+1 more)
(+108 files in other folders)
