[metadata]
name = alohax_hw_bridge
version = 0.1.0
description = Hardware bridge for AlohaX robot

[options]
install_requires =
    setuptools
    rclpy
    sensor_msgs
    geometry_msgs
    control_msgs
    trajectory_msgs

[options.entry_points]
console_scripts =
    alohax_bridge = alohax_hw_bridge.alohax_bridge:main

[install]
install_scripts = $base/lib/alohax_hw_bridge

[develop]
script_dir = $base/lib/alohax_hw_bridge